--- a/breakfast.html
+++ b/breakfast.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul class="topnav">
-        <li><a class="active" href="index.html">All Menus</a></li>
-        <li><a href="breakfast.html">Breakfast</a></li>        
+        <li><a href="index.html">All Menus</a></li>
+        <li><a class="active" href="breakfast.html">Breakfast</a></li>        
         <li><a href="lunch.html">Lunch</a></li>
         <li><a href="dinner.html">Dinner</a></li>
         <li><a href="vegetarian.html">Vegetarian</a></li>
@@ -18,9 +18,9 @@
     </ul>
 
     <div id="menu" class="container">
-        <h1>Diner-PancakeHouse Menu</h1>
+        <h1>Breakfast Menu</h1>
     </div>
 
-    <script src = "index.js"></script>
+    <script src = "breakfast.js"></script>
   </body>
 </html>
